--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,12 @@
 @plugin "daisyui" {
   themes: night --default;
 }
+
+@theme {
+  --font-montserrat: "Montserrat", "sans-serif";
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("/assets/fonts/montserrat-alternates/MontserratAlternates-Medium.ttf") format("truetype");
+}
