--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -1,1 +1,14 @@
-<p>home-page works!</p>,
+<h1 class="text-3xl font-bold font-montserrat">Todo los Productos</h1>
+<h2 class="text-xl mb-2">Para toda las edades y gustos</h2>
+<hr class="mb-2" />
+
+<div
+  class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-2"
+>
+  <product-card></product-card>
+  <product-card></product-card>
+  <product-card></product-card>
+  <product-card></product-card>
+  <product-card></product-card>
+  <product-card></product-card>
+</div>
