--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,18 @@
 
 @theme {
   --font-montserrat: "Montserrat", "sans-serif";
+
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
 @font-face {
