--- a/src/app/products/components/product-card/product-card.component.html
+++ b/src/app/products/components/product-card/product-card.component.html
@@ -1,18 +1,12 @@
 <div class="card card-compact bg-base-100 shadow-xl animate-fadeIn">
   <figure>
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-      alt="Shoes"
-    />
+    <img [src]="product().images | productImage" alt="Shoes" />
   </figure>
   <div class="card-body">
-    <h2 class="card-title">Card Title</h2>
-    <p>
-      A card component has a figure, a body part, and inside body there are
-      title and actions parts
-    </p>
+    <h2 class="card-title text-accent text-lg">{{ product().title }}</h2>
+    <p>{{ product().description | slice : 0 : 70 }} ...</p>
     <div class="card-actions justify-end">
-      <a [routerLink]="['/product', 't-shirt']" class="link link-primary"
+      <a [routerLink]="['/product', product().slug]" class="link link-primary"
         >ver Producto</a
       >
     </div>
