--- a/src/app/products/components/product-card/product-card.component.html
+++ b/src/app/products/components/product-card/product-card.component.html
@@ -3,7 +3,12 @@
     <img [src]="product().images | productImage" alt="Shoes" />
   </figure>
   <div class="card-body">
-    <h2 class="card-title text-accent text-lg">{{ product().title }}</h2>
+    <h2
+      [routerLink]="['/product', product().slug]"
+      class="card-title text-accent text-lg hover:underline cursor-pointer"
+    >
+      {{ product().title }}
+    </h2>
     <p>{{ product().description | slice : 0 : 70 }} ...</p>
     <div class="card-actions justify-end">
       <a [routerLink]="['/product', product().slug]" class="link link-primary"
