--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -2,7 +2,6 @@
 <h2 class="text-xl mb-2">Para toda las edades y gustos</h2>
 <hr class="mb-2" />
 
-<app-pagination [pages]="productsResource.value()?.pages ?? 0"></app-pagination>
 <div
   class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-2"
 >
@@ -13,3 +12,7 @@
   <p>No hay Productos</p>
   }
 </div>
+<app-pagination
+  [pages]="productsResource.value()?.pages ?? 0"
+  [currentPage]="paginationService.currentPage()"
+></app-pagination>
