--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,8 @@
-<form class="flex flex-col gap-2">
+<form
+  class="flex flex-col gap-2"
+  [formGroup]="loginForm"
+  (ngSubmit)="onSubmit()"
+>
   <!-- email label -->
   <label class="input input-bordered flex items-center gap-2">
     <svg
@@ -14,7 +18,12 @@
         d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z"
       />
     </svg>
-    <input type="text" class="grow" placeholder="Email" />
+    <input
+      type="text"
+      class="grow"
+      placeholder="Email"
+      formControlName="email"
+    />
   </label>
 
   <!-- password label -->
@@ -31,7 +40,12 @@
         clip-rule="evenodd"
       />
     </svg>
-    <input type="password" class="grow" value="password" />
+    <input
+      type="password"
+      class="grow"
+      placeholder="password"
+      formControlName="password"
+    />
   </label>
 
   <button type="submit" class="btn btn-secondary">Login</button>
@@ -41,3 +55,12 @@
     <a routerLink="/auth/register" class="text-secondary">Créala una aquí </a>
   </p>
 </form>
+
+@if (hasError()) {
+<div
+  role="alert"
+  class="alert alert-error animate-fadeIn fixed top-5 right-5 w-52"
+>
+  <span>Error en el formulario</span>
+</div>
+}
