--- a/src/app/store-front/components/front-navbar/front-navbar.component.html
+++ b/src/app/store-front/components/front-navbar/front-navbar.component.html
@@ -86,6 +86,15 @@
   </div>
 
   <div class="navbar-end">
-    <a class="btn">Button</a>
+    @if (authService.authStatus()==='authenticated') {
+    <button class="btn btn-ghost">{{ authService.user()?.fullName }}</button>
+    <button class="btn btn-sm btn-error" (click)="authService.logout()">
+      Salir
+    </button>
+    }@else if (authService.authStatus()==='not-authenticated') {
+    <a routerLink="/auth/login" class="btn btn-secondary">Login</a>
+    }@else {
+    <a class="btn btn-ghost">...</a>
+    }
   </div>
 </div>
