refactor(admin): corregir nombre de variable de instancia de AuthService)

--- a/src/app/admin-dashboard/layouts/admin-dashboard-layout/admin-dashboard-layout.component.html
+++ b/src/app/admin-dashboard/layouts/admin-dashboard-layout/admin-dashboard-layout.component.html
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div>
-  <div (click)="authServer.logout()" class="flex-1 ml-64 px-5">
+  <div (click)="authService.logout()" class="flex-1 ml-64 px-5">
     <router-outlet></router-outlet>
   </div>
 </div>
