feat(admin): implementar y diseñar detalle de producto, validacion de errores en el formulario del producto y preparacion de la data para actualizar informacion del producto

--- a/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -1,1 +1,11 @@
-<p>product-admin-page works!</p>,
+@if (productResource.isLoading()) {
+<div>ide del producto: {{ productId() }}</div>
+<div class="flex justify-center items-center h-screen">
+  <span class="loading loading-spinner loading-lg"></span>
+</div>
+}
+<!--  -->
+@if (productResource.hasValue()) {
+
+<product-details [product]="productResource.value()!" />
+}
